code25_all/scala/10824878.txt
$ scala -cp scalacheck.jar

scala> import org.scalacheck.Prop.forAll

<console>:7: error: object scalacheck is not a member of package org
   import org.scalacheck.Properties
              ^

